--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -3,35 +3,25 @@
 @tailwind utilities;
 
 @font-face {
-	font-family: "TanMonCheri";
-	src: url("/fonts/tan-mon-cheri.ttf") format("truetype");
-	font-weight: 400;
-}
-@font-face {
-	font-family: "TTCommonsPro";
-	src: url("/fonts/tt-commons-pro-bold.ttf") format("truetype");
+	font-family: "TheSeasons";
+	src: url("/fonts/theseasons-bd.otf");
 	font-weight: 700;
 }
 @font-face {
-	font-family: "TTCommonsPro";
-	src: url("/fonts/tt-commons-pro-medium.ttf") format("truetype");
-	font-weight: 500;
-}
-@font-face {
-	font-family: "TTCommonsPro";
-	src: url("/fonts/tt-commons-pro-normal.ttf") format("truetype");
+	font-family: "TheSeasons";
+	src: url("/fonts/theseasons-reg.otf");
 	font-weight: 400;
 }
 @font-face {
-	font-family: "TTCommonsPro";
-	src: url("/fonts/tt-commons-pro-light.ttf") format("truetype");
+	font-family: "TheSeasons";
+	src: url("/fonts/theseasons-lt.otf");
 	font-weight: 300;
 }
 
 html,
 body {
 	@apply bg-white dark:bg-gray-950;
-	font-family: "TTCommonsPro", "TanMonCheri";
+	font-family: "TheSeasons";
 	@media (prefers-color-scheme: dark) {
 		color-scheme: dark;
 	}
