--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -35,6 +35,10 @@ body {
 	@media (prefers-color-scheme: dark) {
 		color-scheme: dark;
 	}
+
+	.rpv-core__canvas-layer {
+		background-color: black;
+	}
 }
 
 @layer base {
